--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
-    "puppeteer": "^21.5.2"
+    "puppeteer": "^21.5.2",
+    "puppeteer-cluster": "^0.23.0"
   },
   "description": ""
 }
