--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.5.2",
-    "puppeteer-cluster": "^0.23.0"
+    "puppeteer-cluster": "^0.23.0",
+    "random-useragent": "^0.5.0"
   },
   "description": ""
 }
