--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.0.1",
     "puppeteer": "^21.5.2",
     "puppeteer-cluster": "^0.23.0",
+    "rand-user-agent": "^2.0.42",
     "random-useragent": "^0.5.0"
   },
   "description": ""
