--- a/backend/package.json
+++ b/backend/package.json
@@ -4,28 +4,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node --trace-warnings --watch app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "JeanCSF",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "mysql": "^2.18.1",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.0.1",
     "puppeteer": "^21.6.1",
     "puppeteer-cluster": "^0.23.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rand-user-agent": "^2.0.42",
-    "random-useragent": "^0.5.0"
+    "random-useragent": "^0.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "exceljs": "^4.4.0"
+  }
 }
