feat:melhoria na consulta de cor

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --trace-warnings --watch app.js"
+    "start": "node app.js",
+    "dev": "node --trace-warnings --watch app.js"
   },
   "keywords": [],
   "author": "JeanCSF",
@@ -13,6 +14,7 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
@@ -21,11 +23,7 @@
     "puppeteer-cluster": "^0.23.0",
     "rand-user-agent": "^2.0.42",
     "random-useragent": "^0.5.0",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
-  "description": "",
-  "devDependencies": {
-    "exceljs": "^4.4.0"
-  }
+  "description": ""
 }
