--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,5 @@
     "random-useragent": "^0.5.0",
     "swagger-ui-express": "^5.0.0"
   },
-  "description": "",
-  "engines": {
-    "node": "20.x"
-  }
+  "description": ""
 }
