--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Generate a build and push to another branch
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   build:
@@ -17,19 +17,17 @@ jobs:
 
       - name: Install all dependencies
         run: |
-          cd frontend
           npm install
 
       - name: Build
         run: |
-          cd frontend
           npm run build
 
       - name: Push
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
-          BRANCH: build 
-          FOLDER: frontend/dist 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          BRANCH: build
+          FOLDER: dist
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: "Build: ({sha}) {msg}"
